# rust-websocket-api

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: book.rs  mod.rs  post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220930_101850_create_book_table.rs
src/: book_routes.rs  errors.rs  main.rs  post.rs  request_payloads.rs  websocket.rs
