[package]
name = "simple-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
actix-web = "4.2.1"
sea-orm = { version = "0.9.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenv = "0.15.0"
serde_json = "1.0.85"
actix-web-actors = "4.1.0"
actix = "0.13.0"
serde = "1.0.145"
